WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171717
ASSERTION FAILED: !frame().document()->inRenderTreeUpdate() in WebCore::FrameView::layout(bool)
https://bugs.webkit.org/show_bug.cgi?id=171717
Summary
ASSERTION FAILED: !frame().document()->inRenderTreeUpdate() in WebCore::Frame...
Ryan Haddad
Reported
2017-05-04 23:48:26 PDT
ASSERTION FAILED: !frame().document()->inRenderTreeUpdate() /Volumes/Data/slave/ios-simulator-10-debug/build/Source/WebCore/page/FrameView.cpp(1291) : void WebCore::FrameView::layout(bool) 1 0x1188c034d WTFCrash 2 0x1188c0369 WTFCrashWithSecurityImplication 3 0x11b63c578 WebCore::FrameView::layout(bool) 4 0x11b25f57c WebCore::Document::implicitClose() 5 0x11b60728b WebCore::FrameLoader::checkCallImplicitClose() 6 0x11b606f95 WebCore::FrameLoader::checkCompleted() 7 0x11b606ff5 WebCore::FrameLoader::loadDone() 8 0x11ada8949 WebCore::CachedResourceLoader::loadDone(bool) 9 0x11d2cfa98 WebCore::SubresourceLoader::notifyDone() 10 0x11d2cffe8 WebCore::SubresourceLoader::didCancel(WebCore::ResourceError const&) 11 0x11cf946d4 WebCore::ResourceLoader::cancel(WebCore::ResourceError const&) 12 0x11cf92adf WebCore::ResourceLoader::cancel() 13 0x11d2cd864 WebCore::SubresourceLoader::willSendRequestInternal(WebCore::ResourceRequest&, WebCore::ResourceResponse const&) 14 0x11cf9299c WebCore::ResourceLoader::init(WebCore::ResourceRequest const&) 15 0x11d2ccc07 WebCore::SubresourceLoader::init(WebCore::ResourceRequest const&) 16 0x11d2ccac3 WebCore::SubresourceLoader::create(WebCore::Frame&, WebCore::CachedResource&, WebCore::ResourceRequest const&, WebCore::ResourceLoaderOptions const&) 17 0x10e6e07fe WebKit::WebLoaderStrategy::loadResource(WebCore::Frame&, WebCore::CachedResource&, WebCore::ResourceRequest const&, WebCore::ResourceLoaderOptions const&) 18 0x11ad91f4c WebCore::CachedResource::load(WebCore::CachedResourceLoader&) 19 0x11ad80d34 WebCore::CachedImage::load(WebCore::CachedResourceLoader&) 20 0x11ada3f38 WebCore::CachedResourceLoader::requestResource(WebCore::CachedResource::Type, WebCore::CachedResourceRequest&&, WebCore::CachedResourceLoader::ForPreload, WebCore::CachedResourceLoader::DeferOption) 21 0x11ada2a41 WebCore::CachedResourceLoader::requestImage(WebCore::CachedResourceRequest&&) 22 0x11b0821bd WebCore::CSSImageValue::loadImage(WebCore::CachedResourceLoader&, WebCore::ResourceLoaderOptions const&) 23 0x11d24364a WebCore::StyleCachedImage::load(WebCore::CachedResourceLoader&, WebCore::ResourceLoaderOptions const&) 24 0x11d24d04e WebCore::Style::loadPendingImage(WebCore::Document&, WebCore::StyleImage const*, WebCore::Element const*, WebCore::Style::LoadPolicy) 25 0x11d24cd4d WebCore::Style::loadPendingResources(WebCore::RenderStyle&, WebCore::Document&, WebCore::Element const*) 26 0x11ccd0327 WebCore::RenderElement::getUncachedPseudoStyle(WebCore::PseudoStyleRequest const&, WebCore::RenderStyle const*, WebCore::RenderStyle const*) const 27 0x11ccc7955 WebCore::RenderElement::getCachedPseudoStyle(WebCore::PseudoId, WebCore::RenderStyle const*) const 28 0x11cf45509 WebCore::needsPseudoElement(WebCore::Element&, WebCore::PseudoId) 29 0x11cf4371a WebCore::RenderTreeUpdater::updateBeforeOrAfterPseudoElement(WebCore::Element&, WebCore::PseudoId) 30 0x11cf434db WebCore::RenderTreeUpdater::pushParent(WebCore::Element&, WebCore::Style::Change) 31 0x11cf42b42 WebCore::RenderTreeUpdater::updateRenderTree(WebCore::ContainerNode&) This assertion failure is seen with the following tests on iOS simulator: fast/ruby/before-block-doesnt-crash.html fast/ruby/before-table-doesnt-crash.html fast/ruby/generated-before-counter-doesnt-crash.html
https://build.webkit.org/results/Apple%20iOS%2010%20Simulator%20Debug%20WK2%20(Tests)/r216233%20(1109)/results.html
Attachments
patch
(1.38 KB, patch)
2017-05-05 01:43 PDT
,
Antti Koivisto
bfulgham
: review+
Details
Formatted Diff
Diff
patch
(1.44 KB, patch)
2017-05-05 09:18 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2017-05-05 01:43:33 PDT
Created
attachment 309152
[details]
patch
Brent Fulgham
Comment 2
2017-05-05 08:33:33 PDT
Comment on
attachment 309152
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=309152&action=review
lgtm. r=me.
> Source/WebCore/loader/FrameLoader.cpp:796 > + // FIXME: It would be better if resource loads were kicked off after render tree update (or didn't complete synchronously).
Can you file a Bugzilla for this and include the number here?
Antti Koivisto
Comment 3
2017-05-05 09:18:56 PDT
Created
attachment 309175
[details]
patch
Radar WebKit Bug Importer
Comment 4
2017-05-05 09:37:39 PDT
<
rdar://problem/32017392
>
WebKit Commit Bot
Comment 5
2017-05-05 11:39:33 PDT
Comment on
attachment 309175
[details]
patch Clearing flags on attachment: 309175 Committed
r216253
: <
http://trac.webkit.org/changeset/216253
>
WebKit Commit Bot
Comment 6
2017-05-05 11:39:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug