ASSERTION FAILED: !frame().document()->inRenderTreeUpdate() in WebCore::FrameView::layout(bool) https://bugs.webkit.org/show_bug.cgi?id=171717

Reviewed by Brent Fulgham.

* loader/FrameLoader.cpp:
(WebCore::FrameLoader::checkCompleted):

    Don't allow frame load to complete in the middle of a render tree update. Instead delay the check.


Canonical link: https://commits.webkit.org/188633@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216253 268f45cc-cd09-0410-ab3c-d52691b4dbfc